<resources>
  <string name="bottom_sheet_frame_text">Frame</string>
  <string name="bottom_sheet_crop_text">Crop</string>
  <string name="bottom_sheet_time_text">Detection Time</string>
  <string name="app_name">Anyplace</string>
  <string name="app_name_logger">Logger</string>
  <string name="app_name_about">About Anyplace</string>
  <string name="action_settings">Settings</string>
  <string name="prefs_name_logger">Preferences:Logger</string>
  <string name="app_choose_folder">Choose folder</string>
  <string name="parentDir">..</string>
  <string name="homeDir">.</string>
  <string name="rootDir">/</string>
  <string name="logger_sampling_title">Sampling Settings</string>
  <string name="logger_samples_interval_title">Samples Interval</string>
  <string name="logger_samples_interval_summary">Time between two consecutive samplings</string>
  <string name="logger_storing_title">Storing Settings</string>
  <string name="logger_folder_browser_title">Folder</string>
  <string name="logger_folder_browser_summary">The folder to store RSS log files</string>
  <string name="logger_filename_title">Filename</string>
  <string name="logger_filename_summary">The file contains RSS log records</string>
  <string name="logger_uploading_title">Uploading Settings</string>
  <string name="logger_server_Username_title">Username</string>
  <string name="logger_server_Username_summary">The logger\'s username</string>
  <string name="logger_server_Password_title">Password</string>
  <string name="logger_server_Password_summary">The logger\'s password</string>
  <string name="logger_others_title">Other Settings</string>
  <string name="logger_add_building_title">Add Building</string>
  <string name="logger_add_building_summary">Open Anyplace Architect</string>
  <string name="walk_bar_max">30</string>
  <string name="prefs_name_anyplace">Preferences</string>
  <string name="algorithms_title">Positioning Algorithms</string>
  <string name="algorithms_summary">Choose one of the following algorithms to estimate
		your position</string>
  <string name="title_activity_test_lib">TestLibActivity</string>
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="list">List</string>
  <string name="map">Map</string>
  <string name="no_internet_connection">No Internet Connection!</string>
  <string name="town_">Town:</string>
  <string name="visibility_">Visibility:</string>
  <string name="country_">Country:</string>
  <string name="indoor_space">Indoor Space</string>
  <string name="server_header">Anyplace Server</string>
  <string name="server_host_url_title">Host address</string>
  <string name="server_path_title">Path</string>
  <string name="server_protocol_title">Protocol</string>
  <string name="user_header">User</string>
  <string name="misc_header">Misc</string>
  <string name="server_port_title">Port number</string>
  <string name="attachment_title">Download incoming images</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="settings">Settings</string>
  <string name="connection_status">Connection Status</string>
  <string name="title_activity_login">Anyplace Login</string>
  <string name="title_select_space">Select Space</string>
  <string name="prompt_username">Username</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be > 3 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="anyplace">Anyplace</string>
  <string name="title_activity_maps">MapsActivity</string>
  <string name="Public">Public</string>
  <string name="Accessible">Accessible</string>
  <string name="Owned">Owned</string>
  <string name="Apply">Apply</string>
  <string name="space_ownership">Space ownership</string>
  <string name="space_type">Type</string>
  <string name="Building">Building</string>
  <string name="Vessel">Vessel</string>
  <string name="search">Search</string>
  <string name="search_space">Search spaces</string>
  <string name="Any">Any</string>
  <string name="All">All</string>
  <string name="status">Status</string>
  <string name="developer_stats">Developer Stats</string>
  <string name="computer_vision">Computer Vision:</string>
  <string name="inference">Inference</string>
  <string name="objects">Objects</string>
  <string name="current_window">Current Window:</string>
  <string name="prefs_header_computer_vision">Computer Vision</string>
  <string name="prefs_header_localization">Localization &amp; Tracking</string>
  <string name="prefs_header_logging">Logging</string>
  <string name="developer_options">Developer Options</string>
  <string name="logging_tutorial">Logging Tutorial</string>
  <string name="tutorial_cvscan_start">1. SCAN:</string>
  <string name="tutorial_cvscan_start_details">
"   - the camera opens to identify objects.
   - these objects belong to the same \"scan window\".
   - \"Upload Scans\": stores fingerprints to the cloud."
  </string>
  <string name="tutorial_cvscan_store">2. LONG-CLICK ON MAP:</string>
  <string name="tutorial_cvscan_store_details">
"  - once scan is done you can assign coordinates
     to the scanned objects
   - this is done by long-clicking on a map location
   - Steps (1), (2) may repeated as necessary
  </string>
  <string name="tutorial_discard_obj_title">DISCARDING OBJECTS:</string>
  <string name="tutorial_discard_obj_desc">
"   - While scanning: \"cancel\" discards current window
   - On window finish: can discard it using the UI"
  </string>
  <string name="tutorial_demo_title">DEMO Mode:</string>
  <string name="tutorial_demo_desc">
"   - long-press \"Scan\" to enter recognize-only mode
  </string>
  <string name="tutorial_restrictions">RESTRICTIONS IMPOSED:</string>
  <string name="tutorial_restrictions_details">
"   - While in (1) or (2) you cannot change a floor
   - Localization in logger is unavailable while there are
     local fingerprints. Either discard them or upload them. (future)"
  </string>
  <string name="clear">Clear</string>
  <string name="clear_window">Confirm</string>
  <string name="upper_floor">Upper floor</string>
  <string name="prefs_header_cvmap">Object Maps</string>
  <string name="prefs_header_data">Data</string>
  <string name="prefs_header_user_locations">User Locations</string>
  <string name="prefs_header_application">Application</string>
  <string name="apply_just_to">Apply just to</string>
  <string name="for_all_spaces">for all spaces</string>
  <string name="confirm">Confirm</string>
  <string name="for_var_var">for %1$s %2$s</string>
  <string name="clear_local_cv_maps">Clear local CV maps</string>
  <string name="summary_logging_window">Log objects for %1$sms per location.</string>
  <string name="summary_refresh_locations">Every %1$sms it pulls other user locations.</string>
  <string name="summary_localization_window">Scan for %1$sms before localizing.</string>
  <string name="change_cv_model">Change Object Recognition Model</string>
  <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
  <string name="summary_map_alpha">Map is %1$s opaque.</string>
  <string name="floor">floor</string>
  <string-array name="intervalArray">
    <item>0.5 sec</item>
    <item>1 sec</item>
    <item>2 sec</item>
  </string-array>
  <string-array name="intervalValues">
    <item>500</item>
    <item>1000</item>
    <item>2000</item>
  </string-array>
  <string-array name="AlgorithmsFullNames">
    
    <item>K Nearest Neighbor (KNN) Algorithm</item>
    <item>Weighted K Nearest Neighbor (WKNN) Algorithm</item>
    <item>Probabilistic Maximum A Posteriori (MAP) Algorithm</item>
    <item>Probabilistic Minimum Mean Square Error (MMSE) Algorithm</item>
  </string-array>
  <string-array name="AlgorithmsValues">
    
    <item>KNN</item>
    <item>WKNN</item>
    <item>MAP</item>
    <item>MMSE</item>
  </string-array>
  <string-array name="AlgorithmsDescriptions">
    
    <item>The KNN algorithm estimates the unknown user location as the average of K locations which have the shortest Euclidean distances between the currently observed RSS fingerprint and the respective mean value fingerprints in the radiomap.</item>
    <item>The WKNN algorithm is a variant of KNN and estimates the unknown user location as the weighted average of K locations which have the shortest Euclidean distances between the currently observed RSS fingerprint and the respective mean value fingerprints in the radiomap. The weight of each location is set equal to the inverse of the distance.</item>
    <item>The MAP algorithm is a probabilistic approach that estimates the unknown user location by maximizing the conditional probability of each location in the radiomap given the currently observed fingerprint (posterior).</item>
    <item>The MMSE algorithm is a probabilistic approach that estimates the unknown user location by calculating the expected value of the location, which is equivalent to the weighted sum of the loations in the radiomap while the weights are set equal to the conditional probability of each location in the radiomap given the currently observed fingerprint (posterior).</item>
  </string-array>
  <string-array name="AlgorithmsNames">
    
    <item> K Nearest Neighbor (KNN)</item>
    <item> Weighted K Nearest Neighbor (WKNN)</item>
    <item> Maximum A Posteriori (MAP)</item>
    <item> Minimum Mean Square Error (MMSE)</item>
  </string-array>
  <string name="find">Find</string>
  <string name="user">User</string>
  <string name="logout">Logout</string>
  <string name="miscellaneous">Miscellaneous</string>
  <string name="cv_map_settings">Vision &amp; Map Settings</string>
  <string name="account">Account:</string>
  <string name="username">Username:</string>
  <string name="url_anyplace_about">https://anyplace.cs.ucy.ac.cy/#about</string>
  <string name="pref_anyplace_server">pref_anyplace_server</string>
  <string name="summary_cv_scan_delay">Consecutive scans are at least %1$sms apart.</string>
  <string name="model_title_desc">The selected model is specialized at:</string>
  <string name="btn_cancel_descr">cancel</string>
  <string name="btn_ok">OK</string>
  <string name="delete_local_msgs">Delete local messages</string>
  <string name="upload_scans">Upload Scans</string>
  <string name="uploading">Uploading..</string>
  <string name="filter">Filter</string>
  <string name="no_results">No results.</string>
  <string name="change_space">Change space</string>
  <string name="location_tracking">Location Tracking</string>
  <string name="summary_tracking_delay">Localize every %1$s ms</string>
  <string name="pref_cv_tracking_delay">pref_cv_tracking_delay</string>
  <string name="pref_cv_tracking_auto_disable">pref_cv_tracking_auto_disable</string>
  <string name="summary_tracking_auto_disable">Stops tracking when %1$s consecutive no detection scans occur</string>
  <string name="title_cv_localization_algorithm">Localization Algorithm</string>
  <string name="pref_cv_loc_algo_choice">pref_cv_loc_algo_choice</string>
  <string name="pref_cv_loc_algo_execution">pref_cv_loc_algo_execution</string>
  <string name="title_cv_loc_algo_execution">Algorithm Execution</string>
  <string name="pref_misc_tutLoggerLongPress">pref_misc_tutLogLongPress</string>
  <string name="pref_misc_backOnline">pref_misc_backOnline</string>
</resources>