<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <!--  ANYPLACE LOGIN
  This is not in use, but it could provide Anyplace login
  (incl. Google login into anyplace).
  Might not work out of the box, play around with it..

   -->
  <!-- INFO this XML has multiple screen configurations.
  The changes must be reflected in all configurations,
  otherwise the bindings will be nullable.
  -->

  <data>
    <variable
      name="vm"
      type="cy.ac.ucy.cs.anyplace.lib.android.viewmodels.anyplace.LoginViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".android.ui.user.AnyplaceLoginActivity">

    <Button
      android:id="@+id/button_loginLocal"
      android:layout_gravity="start"
      android:layout_marginTop="32dp"
      android:enabled="false"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:text="@string/action_sign_in"
      android:textSize="22sp"
      app:layout_constraintBottom_toTopOf="@id/button_loginGoogle"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView_Error"
      app:layout_constraintVertical_bias="0.0"
      android:background="@drawable/button_login_local"
      app:icon="@drawable/ic_blank_icon"

      android:backgroundTint="@null"
      />

    <!--style="@style/SignInButtonAnyplace"-->

    <Button
      android:id="@+id/button_loginGoogle"
      app:backgroundTint="@null"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="Google"
      android:textSize="22sp"
      style="@style/SignInButtonGoogle"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/button_loginLocal" />

    <EditText
      android:id="@+id/username"
      android:layout_width="0dp"
      android:background="@drawable/custom_edittext"
      android:layout_height="48dp"
      android:paddingStart="12dp"
      android:drawablePadding="12dp"
      android:paddingEnd="12dp"
      android:layout_marginTop="62dp"
      android:autofillHints="@string/prompt_username"
      android:hint="@string/prompt_username"
      android:drawableStart="@drawable/custom_user_icon"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:drawableStart="@drawable/custom_password_icon"
      android:drawableEnd="@drawable/ic_show_password"
      android:background="@drawable/custom_edittext"
      android:drawablePadding="12dp"
      android:layout_marginTop="8dp"
      android:autofillHints="@string/prompt_password"
      android:hint="@string/prompt_password"
      android:imeActionLabel="@string/action_sign_in_short"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
      android:id="@+id/loading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="64dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="@+id/textView_Error"
      app:layout_constraintEnd_toEndOf="@+id/textView_Error"
      app:layout_constraintStart_toStartOf="@+id/textView_Error"
      app:layout_constraintTop_toTopOf="@+id/textView_Error"
      app:layout_constraintVertical_bias="0.3" />

    <TextView
      android:id="@+id/textView_Error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="42dp"
      android:gravity="center"
      android:text="Error Message"
      android:textColor="@color/redDark"
      android:textSize="18sp"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
      android:id="@+id/imageView_Error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginBottom="12dp"
      android:src="@drawable/ic_sad_dark_red"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@+id/textView_Error"
      app:layout_constraintEnd_toEndOf="@+id/textView_Error"
      app:layout_constraintStart_toStartOf="@+id/textView_Error"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintVertical_bias="0.060000002" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>