<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/bottom_sheet_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      app:behavior_hideable="true"
      app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <LinearLayout
        android:id="@+id/bottom_sheet_internal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cv_bottom_sheet_logging_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingTop="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/gesture_layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="0dp"
          android:paddingBottom="20dp"
          tools:layout_editor_absoluteX="8dp"
          tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/tv_titleCvSettingsDeveloper"
            style="@style/BottomSheetTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/developer_stats"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/gesture_layout" />

        <TextView
            android:id="@+id/tv_titleCurrentWindow"
            style="@style/BottomSheetSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Stored Windows"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleCvSettingsDeveloper" />

        <TextView
            android:id="@+id/tv_currentWindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleCurrentWindow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_titleCurrentWindow"
            tools:text="2" />

        <TextView
            android:id="@+id/tv_titleDevSlidingWindow"
            style="@style/BottomSheetSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/current_window"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleCurrentWindow" />


        <TextView
            android:id="@+id/tv_titleElapsedTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Elapsed Time"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleDevSlidingWindow" />


        <TextView
            android:id="@+id/tv_elapsedTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="2.4s"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleElapsedTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_titleElapsedTime" />

        <TextView
            android:id="@+id/tv_titleWindowObjectsAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Scanned Objects (all)"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleElapsedTime" />


        <TextView
            android:id="@+id/tv_windowObjectsAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleWindowObjectsAll"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_titleWindowObjectsAll"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_titleWindowObjectsUnique"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Unique Objects"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleWindowObjectsAll" />


        <TextView
            android:id="@+id/tv_windowObjectsUnique"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleWindowObjectsUnique"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_titleWindowObjectsUnique"
            tools:text="5" />


        <TextView
            android:id="@+id/tv_titleTotalObjects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total Unique Objects"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleWindowObjectsUnique" />

        <TextView
            android:id="@+id/tv_totalObjects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleTotalObjects"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_titleTotalObjects"
            tools:text="15" />


        <TextView
            android:id="@+id/tv_titleCV"
            style="@style/BottomSheetSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/inference"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleTotalObjects" />

        <TextView
            android:id="@+id/frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_frame_text"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleCV" />


        <TextView
            android:id="@+id/frame_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleCV"
            tools:text="000x000" />

        <!--app:layout_constraintTop_toBottomOf="@id/tv_titleDevSlidingWindow"-->


        <TextView
            android:id="@+id/crop"
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:text="@string/bottom_sheet_crop_text"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_info" />


        <TextView
            android:id="@+id/crop_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/darkGray"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_info"
            tools:text="400x400" />


        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_time_text"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crop_info" />

        <TextView
            android:id="@+id/time_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crop_info"
            tools:text="200ms" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_devSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_titleCvSettingsDeveloper,tv_totalObjects,tv_titleTotalObjects,tv_titleElapsedTime,crop_info,tv_titleCV,tv_titleWindowObjectsUnique,tv_titleCurrentWindow,frame_info,time_info,crop,tv_titleWindowObjectsAll,tv_titleDevSlidingWindow,frame,tv_windowObjectsAll,tv_elapsedTime,tv_windowObjectsUnique,tv_currentWindow,time"
            tools:visibility="visible" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/bottom_sheet_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/ButtonRound"
        android:src="@drawable/ic_icon_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom_sheet_internal"
        app:layout_constraintBottom_toTopOf="@id/bottom_sheet_internal" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>